<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Card_RestaurantCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:clickable="true"
    android:foreground="?selectableItemBackground"
    card_view:cardBackgroundColor="#ffffff"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="10dp">


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                tools:text="Cairo" />

            <TextView
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/city"
                android:textColor="#1F384D"
                android:textSize="32sp"
                tools:text="25" />

            <TextView
                android:id="@+id/celsius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/city"
                android:layout_toEndOf="@id/temp"
                android:text="@string/cel"
                android:textColor="#1F384D"
                android:textSize="18sp"
                android:layout_toRightOf="@id/temp" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/humLab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textColor="#9999A5"
                android:textSize="@dimen/textsize" />

            <TextView
                android:id="@+id/hum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/humLab"
                android:layout_toEndOf="@id/humLab"
                android:textColor="#9999A5"
                android:textSize="@dimen/textsize"
                tools:text="83"
                android:layout_toRightOf="@id/humLab" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/humLab"
                android:layout_toEndOf="@id/hum"
                android:text="@string/per"
                android:textColor="#9999A5"
                android:textSize="@dimen/textsize"
                android:layout_toRightOf="@id/hum" />

            <TextView
                android:id="@+id/windLab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/humLab"
                android:layout_marginTop="15dp"
                android:text="@string/wind"
                android:textColor="#9999A5"
                android:textSize="@dimen/textsize" />

            <TextView
                android:id="@+id/windSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/windLab"
                android:layout_toEndOf="@id/windLab"
                android:textColor="#9999A5"
                android:textSize="@dimen/textsize"
                tools:text="9"
                android:layout_toRightOf="@id/windLab" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/windLab"
                android:layout_toEndOf="@id/windSpeed"
                android:text="@string/speedmeasurement"
                android:textColor="#9999A5"
                android:textSize="@dimen/textsize"
                android:layout_toRightOf="@id/windSpeed" />

            <TextView
                android:id="@+id/windDegLab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/windLab"
                android:layout_marginTop="15dp"
                android:text="@string/winddirection"
                android:textColor="#9999A5"
                android:textSize="@dimen/textsize" />

            <TextView
                android:id="@+id/windDeg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/windDegLab"
                android:layout_below="@id/windLab"
                android:layout_toEndOf="@id/windDegLab"
                android:textColor="#9999A5"
                android:textSize="@dimen/textsize"
                tools:text="340"
                android:layout_toRightOf="@id/windDegLab" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/windDegLab"
                android:layout_below="@id/windLab"
                android:layout_toEndOf="@id/windDeg"
                android:text="@string/deg"
                android:textColor="#9999A5"
                android:textSize="@dimen/textsize"
                android:layout_toRightOf="@id/windDeg" />
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>